--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,5 +9,6 @@
     <h1> THis is  my Ejs page and i want to Host</h1>
     <h2><%= title %></h2>
     <h2><%= message %></h2>
+    <h1>Now my project is deployed</h1>
 </body>
 </html>
